fix avatar alignment

--- a/css/main.css
+++ b/css/main.css
@@ -1533,6 +1533,7 @@ a.username:hover {
 .thunks .logo-and-text svg {
   width: 44px;
   height: 44px;
+  vertical-align: middle;
 }
 .run-summary .succeeded {
   color: var(--base0B);
