--- a/less/run.less
+++ b/less/run.less
@@ -105,6 +105,7 @@ a.username {
     svg {
       width: 44px;
       height: 44px;
+      vertical-align: middle;
     }
   }
 }
